# rust-app-password-manager

./: .gitignore  Cargo.toml  app_stax.json  build.rs  nanopass.py
.cargo/: config.toml
src/: main.rs  password.rs
src/c/: aes.c
