[package]
name = "nanopass"
version = "1.2.1"
authors = ["yhql", "Olivier Hériveaux"]
edition = "2021"

[build-dependencies]
cc = "1.0.73"
bindgen = "0.59.2"

[dependencies]
ledger_device_sdk = { git = "https://github.com/LedgerHQ/ledger-device-rust-sdk.git", branch = "feat/stax_nbgl_2" }
ledger_secure_sdk_sys = { git = "https://github.com/LedgerHQ/ledger-device-rust-sdk.git", branch = "feat/stax_nbgl_2" }
include_gif = { git = "https://github.com/LedgerHQ/ledger-device-rust-sdk.git", branch = "feat/stax_nbgl_2" }
cty = "0.2.0"
heapless = { version = "0.7.16", default-features = false }

[profile.release]
opt-level = 'z'
lto = true

[features]
default = ["pending_review_screen"]
pending_review_screen = []

[package.metadata.ledger]
curve = ["secp256k1"]
flags = "0"
path = ["10016'"]
name = "NanoPass"

[package.metadata.ledger.nanos]
icon = "crab.gif"

[package.metadata.ledger.nanox]
icon = "key_14x14.gif"

[package.metadata.ledger.nanosplus]
icon = "key_14x14.gif"

[package.metadata.ledger.stax]
icon = "crab_32x32.gif"

[package.metadata.ledger.flex]
icon = "crab_40x40.gif"
